spade-tests/src/snapshots/spade_tests__parser__required_parameter_message_is_helpful.snap
---
source: spade-tests/src/parser.rs
---
fn main() -> bool {
    #[wal_suffix()]
    let x = 0;
    x
}


error: Missing argument 'suffix'
  ┌─ testinput:2:7
  │
2 │     #[wal_suffix()]
  │       ^^^^^^^^^^ Missing argument 'suffix'

error: Output type mismatch. Expected bool, got Number<_>
  ┌─ testinput:1:19
  │  
1 │   fn main() -> bool {
  │                ---- bool type specified here
  │ ╭───────────────────^
2 │ │     #[wal_suffix()]
3 │ │     let x = 0;
4 │ │     x
5 │ │ }
  │ ╰─^ Found type Number<_>
  │  
  = note: Expected: bool
               Got: Number<_>
